...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginView"
    tools:context="com.group04.quickcash.LoginActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordET"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/loginUsernameET"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="Please enter your username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
...
