<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employeeView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/employeeLoginDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Welcome Employee!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/employeeSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Search for Jobs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobs" />

    <Button
        android:id="@+id/viewOffers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="View Offers"
        app:layout_constraintStart_toStartOf="@+id/employeeSearchButton"
        app:layout_constraintTop_toBottomOf="@+id/employeeSearchButton" />

    <Button
        android:id="@+id/makeAReview_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="Make a review"
        app:layout_constraintStart_toStartOf="@+id/mapbutton"
        app:layout_constraintTop_toBottomOf="@+id/showJobsOnMapButton" />

    <Button
        android:id="@+id/showJobsOnMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="214dp"
        android:text="Find Nearby Jobs"
        app:layout_constraintEnd_toEndOf="@+id/mapbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jobs"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="51dp"
        android:text="Get jobs less than 10km"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapbutton" />

    <Button
        android:id="@+id/mapbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Check your place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeAReview_employee" />

    <Button
        android:id="@+id/employeeLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="Logout"
        app:layout_constraintStart_toStartOf="@+id/viewOffers"
        app:layout_constraintTop_toBottomOf="@+id/viewOffers"
        tools:ignore="UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>