<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/registerTitle"
...
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/registerPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerUserSpinner"
        app:layout_constraintTop_toBottomOf="@id/registerEmail"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:hint="First Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registerLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitle" />

    <EditText
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="70dp"
        android:hint="Type of user"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPasswordET" />

    <Button
...
