<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployerActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:text="Make a review"
        app:layout_constraintStart_toStartOf="@+id/employerSearchButton"
        app:layout_constraintTop_toBottomOf="@+id/employerPayButton" />

    <Button
        android:id="@+id/employerSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
